# mlopt-template

./: .gitignore  README.md  pyproject.toml
docs/dev/: returns.md
src/mlopt_template/: README.md
src/mlopt_template/common/: logging.py
src/mlopt_template/data/: README.md
src/mlopt_template/data/transforms/: stats_transforms.py
src/mlopt_template/machine_learning/: README.md  dataset.py  model.py
