[project]
name = "mlopt-template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Adrian Berges Enfedaque", email = "aberges@gradiant.org"},
]
dependencies = [
    "attrs>=23.2.0",
    "returns>=0.21.0",
    "rich>=13.7.1",
    "typer>=0.12.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
]
